Update insert functions for json
